* Tue Mar 30 2010 Andrew McNab <Andrew.McNab@cern.ch>
- Apply patch to mod_gridsite.c from Jan Just Keijser 
  <janjust@nikhef.nl> to detect change to 
  SSLSrvConfigRec etc in "sslireneg" patch to mod_ssl
* Fri Nov 27 2009 Andrew McNab <Andrew.McNab@cern.ch>
- GRSTx509MakeProxyCert() now creates RFC 3280 
  proxies if any earlier proxies are RFC style
* Tue Nov 10 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Discard X509_V_ERR_PROXY_CERTIFICATES_NOT_ALLOWED
  errors in GRST_callback_SSLVerify_wrapper(), needed
  for newer OpenSSL
* Mon Oct 19 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Discard X509_V_ERR_INVALID_PURPOSE errors in 
  GRST_callback_SSLVerify_wrapper(), needed by 
  OpenSSL 0.9.8e
* Thu Sep 17 2009 Andrew McNab <Andrew.McNab@cern.ch>
- GRSThttpUrlEncode rather than GRSThttpUrlMildencode
  in mod_gridsite directory listings.
* Fri Sep 11 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Include GRSTgaclUserFree() memory leak fix in 
  mod_gridsite_perm_handler() in mod_gridsite.c
* Mon Aug 10 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Fix %016lx specification when creating passcodes.
* Fri Aug 7 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.7.6 ====
* Wed Jul 29 2009 Andrew McNab <Andrew.McNab@cern.ch>
- When creating proxies with GRSTx509MakeProxyCert,
  use 2=v3 rather than the old 3=v4 Globus behaviour.
  See Bug #53721 from Joni Hahkala.
* Fri Jul 23 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.7.5 ====
* Thu Jul 23 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Check multiple VOMS issuer certs if present, and
  use most permissive time range they provide to
  resolve Bug #53497
- Change (GRSTerrorLogFunc) to return int, to allow 
  if-less C macro using && instead.
- Remove 2 argument open(...O_CREAT...) instance in
  grst_admin_file.c
- Fix Bug #53314 due to change in VOMS (user cert DN 
  vs user cert issuer's DN)
* Fri Jul 03 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.7.4 ====